# b3d

./: Cargo.toml  README.md
.github/workflows/: rust.yml
b3d/: Cargo.toml
b3d/examples/: read.rs
b3d/src/: lib.rs
bevy_b3d/: Cargo.toml
bevy_b3d/src/: lib.rs  loader.rs
src/: error.rs  lib.rs  utils.rs
