[package]
name = "bevy_b3d"
version = "0.3.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Bevy extension for B3D loading"
homepage = "https://github.com/scpcbredux/b3d/"
documentation = "https://docs.rs/bevy_b3d"
repository = "https://github.com/scpcbredux/b3d/"
readme = "../README.md"
keywords = ["bevy"]

[dependencies]
bevy = { version = "0.13.0", default-features = false, features = ["bevy_asset", "bevy_pbr", "bevy_render", "bevy_scene",] }
b3d = { path = "../b3d", version = "0.1.8" }
thiserror = "1.0.51"
anyhow = "1.0.76"
